# yatai-demo

./: .gitignore  .gitlab-ci.yml  README.md
argocd/: README.md  deployment.yaml
cert-manager/: README.md  cert.yaml
iris/: pyproject.toml
maine-coon/: Chart.yaml  values.yaml
maine-coon/templates/iris/: deployment.yaml  request.yaml
observability/: grafana-values.yaml  metric.yaml  prometheus-values.yaml
terraform/: Makefile  README.md  main.tf  provider.tf  terraform.tf  variables.tf
terraform/configs/dev/: terragrunt.hcl
terraform/modules/artifact-registry/: README.md  main.tf  variables.tf
terraform/modules/gke/: README.md  main.tf  outputs.tf  variables.tf
yatai-cluster/: Chart.yaml  values.yaml
yatai-cluster/templates/: ingress.yaml
yatai-cluster/templates/database/: statefulset.yaml  svc.yaml
yatai-cluster/templates/storage/: statefulset.yaml  svc.yaml
