[tool.poetry]
name = "iris-classifier"
version = "0.1.0"
description = ""
authors = ["Natthanan Bhukan <natthanan.bhu@rtae.cloud>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
bentoml = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
